re-enable tests that failed after the first iteration of Craeg's resolver patch.
Submitted by:	Craeg K Strong <cstrong@arielpartners.com>


git-svn-id: https://svn.apache.org/repos/asf/ant/core/trunk@273514 13f79535-47bb-0310-9956-ffa450edef68